--- a/MassAutoGarage/Views/HR_MainPowerRequisition/MainPowerRequisitionList.cshtml
+++ b/MassAutoGarage/Views/HR_MainPowerRequisition/MainPowerRequisitionList.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MassAutoGarage.Models.HRMS_EmployeeDocuments.HRMSEmployeeDocumentsModel>
+﻿@model List<MassAutoGarage.Models.HR_MainPowerRequisition.HR_MainPowerRequisitionModel>
 
 @{
     ViewBag.Title = "Main Power Requisition List";
@@ -41,7 +41,27 @@
 
     legend {
         float: none;
-        width: 29%;
+        width: 40%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 5px 10px;
+        font-size: small;
+        margin-bottom: 20px;
+    }
+
+    #legendEducationalRequirement {
+        float: none;
+        width: 18%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 5px 10px;
+        font-size: small;
+        margin-bottom: 20px;
+    }
+
+    #legendPreferredQualifications {
+        float: none;
+        width: 45%;
         background-color: #bbb1b1;
         color: white;
         padding: 5px 10px;
@@ -92,58 +112,50 @@
                         <thead>
                             <tr>
                                 <th style=" width: 1%;">S.N.</th>
-                                <th>Name</th>
-                                <th>Date</th>
-                                <th>Designation</th>
-                                <th>Branch</th>
+                                <th>Voucher No</th>
                                 <th>Department</th>
-                                <th>EmpId</th>
+                                <th>Requested Date</th>
+                                <th>Required Date</th>
+                                <th>Designation</th>
+                                @*<th>Age Range</th>
+                                    <th>Salary Range</th>*@
+                                <th>Status</th>
+                                <th>Gender</th>
                                 <th style="width:20%;">Action</th>
                             </tr>
                         </thead>
                         <tbody id="tBodyId">
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td data-th="Srl.No.">@i</td>
+                                    <td data-th="Srl.No.">@item.VoucherNo</td>
+                                    <td data-th="Code">@item.DepartmentName</td>
+                                    <td data-th="Code">@item.RequestedDate</td>
+                                    <td data-th="Code">@item.RequiredDate</td>
+                                    <td data-th="Code">@item.Designation</td>
+                                    @*<td data-th="Code">@item.AgeRange</td>
+                                        <td data-th="Code">@item.SalaryRange</td>*@
+                                    <td data-th="Code">@item.StatusID</td>
+                                    <td data-th="Code">@item.GenderID</td>
+                                    <td data-th="Action">
+                                        <div class="d-flex gap-2">
 
-                            @*@foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td data-th="Srl.No.">@i</td>
-                                        <td data-th="Srl.No.">@item.BranchName</td>
-                                        <td data-th="Code">@item.EmployeeName</td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.files" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.EmirateFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.PassportFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.VisaFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.InsuranceFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.EmpCardFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-
-                                        <td data-th="Action">
-
-                                            <div class="d-flex gap-2">
-                                                <div class="edit">
-
-                                                    <a href="/HRMS_EmployeeDocuments/EmployeeDocuments?Id=@item.EmpDocId" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
-                                                </div>
-                                                <div class="remove">
-                                                    <a href="javascript:void(0)" onclick="return DeleteEmployeeDocuments('@item.EmpDocId')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
-
-                                                </div>
+                                            <div>
+                                                <a href="javascript:void(0)" onclick="return ViewMainPowerDetails('@item.Idincrept')" class="btn btn-sm btn-primary remove-item-btn">View <i class="fa fa-eye" aria-hidden="true"></i></a>
                                             </div>
-                                        </td>
-                                    </tr>
-                                    i++;
-                                }*@
+
+                                            <div class="edit">
+                                                <a href="/HR_MainPowerRequisition/MainPowerRequisition?Id=@item.Idincrept" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
+                                            </div>
+                                            <div class="remove">
+                                                <a href="javascript:void(0)" onclick="return DeleteMainPowerRequisition('@item.Idincrept')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -151,6 +163,174 @@
         </div>
     </div>
 </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="MainPowerModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="MainPowerModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="MainPowerModalLabel"><strong>Main Power Requisition Details</strong></h5>
+                <button type="button" class="btn-close btn btn-danger" data-bs-dismiss="modal" aria-label="Close" onclick="return RemoveTableRecords();"></button>
+            </div>
+            <div class="modal-body">
+
+                @*/////////////////////////////////////////////////////////////////////////////////////////////////////////////*@
+
+                <div class="card-body">
+                    <div class="live-preview">
+                        <div class="row gy-4">
+                            <fieldset>
+                                <legend style="background-color:#0a0a0a ">( Please Fill In The Information Inside The Box And Line Provided )</legend>
+
+                                <div class="row gy-4">
+                                    <div class="col-xxl-2 col-md-2">
+                                        <label for="labelInput" class="form-label">Voucher No <code>*</code></label>
+                                        <input type="text" id="txtVoucherNo" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Department<code>*</code></label>
+                                        <input type="text" id="txtDepartmentName" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-2 col-md-2">
+                                        <label for="labelInput" class="form-label">Requested Date<code>*</code></label>
+                                        <input type="text" id="txtRequestedDate" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-2 col-md-2">
+                                        <label for="labelInput" class="form-label">Required Date<code>*</code></label>
+                                        <input type="text" id="txtRequiredDate" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Position/Title<code>*</code></label>
+                                        <input type="text" id="txtDesignation" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <h5 class="">Employeement Type :</h5>
+                                    <div class="col-xxl-4 col-md-4 my-2">
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="FullTime" readonly="readonly" /> Full Time</label>
+                                    </div>
+
+                                    <div class="col-xxl-4 col-md-4 my-2">
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="ProjectHire" readonly="readonly" /> Project Hire</label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4 my-2">
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="Temporary" readonly="readonly" /> Temporary</label>
+                                    </div>
+
+                                    <div class="col-xxl-12 col-md-12 my-2">
+                                        <label for="labelInput" class="form-label">Brief Description Of Duties(Or Attach The Job Description)<code>*</code></label>
+                                        <textarea type="text" id="txtJobDescription" class="form-control py-2" readonly="readonly"></textarea>
+                                    </div>
+
+                                    <h5>Nature Of Request :</h5>
+                                    <div class="col-xxl-4 col-md-4 my-2">
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="AdditionNew" readonly="readonly" /> New/Addition</label>
+                                    </div>
+
+                                    <div class="col-xxl-4 col-md-4 my-2">
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="Budgeted" readonly="readonly" /> Budgeted</label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4 my-2">
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="Replacement" readonly="readonly" /> Replacement</label>
+                                    </div>
+
+                                    <div class="col-xxl-3 col-md-3  my-2">
+                                        <label for="labelInput" class="form-label">Age Range<code>*</code></label>
+                                        <input type="text" id="txtAgeRange" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3  my-2">
+                                        <label for="labelInput" class="form-label">Salary Range<code>*</code></label>
+                                        <input type="text" id="txtSalaryRange" class="form-control" readonly="readonly" />
+
+                                    </div>
+
+                                    <div class="col-xxl-3 col-md-3  my-2">
+                                        <label for="labelInput" class="form-label">Status<code>*</code></label>
+                                        <input type="text" id="txtStatusID" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3  my-2">
+                                        <label for="labelInput" class="form-label">Gender<code>*</code></label>
+                                        <input type="text" id="txtGenderID" class="form-control" readonly="readonly" />
+                                    </div>
+
+
+
+
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+
+                @*/////////////////////////////////////////////////////////////////////////////////////////////////////////////*@
+
+                <div class="card-body my-4">
+                    <div class="live-preview">
+                        <div class="row gy-4">
+
+                            <fieldset>
+                                <legend style="background-color:#0a0a0a;" id="legendEducationalRequirement">
+                                    Educational Requirement
+                                </legend>
+                                <div class="table-responsive">
+                                    <table border="1" id="example" class="display table table-bordered" style="width:100%">
+                                        <thead>
+                                            <tr>
+                                                <th>Qualification</th>
+                                                <th>Passing Year</th>
+                                                <th>Board</th>
+                                                <th>Percentage(%)</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="tBodyId">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+                @*/////////////////////////////////////////////////////////////////////////////////////////////////////////////*@
+                <div class="card-body my-4">
+                    <div class="live-preview">
+                        <div class="row gy-4">
+
+                            <fieldset>
+                                <legend style="background-color:#0a0a0a;" id="legendPreferredQualifications">
+                                    Preferred Qualifications/Experience(Not Mentioned Above Or In The JD)
+                                </legend>
+                                <div class="row gy-5">
+                                    <div class="col-xxl-6 col-md-6 mb-3">
+                                        <label for="labelInput" class="form-label">Preferred Qualification<code>*</code></label>
+                                        <input type="text" id="txtPreferredQualification" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-6 col-md-6 mb-3">
+                                        <label for="labelInput" class="form-label">Experience<code>*</code></label>
+                                        <input type="text" id="txtPreferredExperience" class="form-control" readonly="readonly" />
+                                    </div>
+                                </div>
+                            </fieldset>
+
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                @*<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>*@
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 @section scripts{
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -168,6 +348,7 @@
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
 }
+<script src="~/MyApp/HR_MainPowerRequisition.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -186,12 +367,23 @@
                     queryString[key] = value;
                 }
             }
+
             $('#txtsearch').val(queryString[key]);
         }
     });
+
     $('#txtsearch').change(function () {
+
         searchfromDB();
     });
+
+    function searchfromDB() {
+        debugger;
+
+        var SearchKey = $('#txtsearch').val();
+        var url = "/HR_MainPowerRequisition/MainPowerRequisitionList?Key=" + SearchKey;
+        window.location.href = url;
+    }
 </script>
 
 
