--- a/MassAutoGarage/Views/HR_RenualAndNonRenwal/RenualAndNonRenwalList.cshtml
+++ b/MassAutoGarage/Views/HR_RenualAndNonRenwal/RenualAndNonRenwalList.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MassAutoGarage.Models.HRMS_EmployeeDocuments.HRMSEmployeeDocumentsModel>
+﻿@model List<MassAutoGarage.Models.HR_RenualAndNonRenwal.HR_RenualAndNonRenwalModel>
 
 @{
     ViewBag.Title = "Renual And Non Renwal List";
@@ -91,58 +91,62 @@
                         <thead>
                             <tr>
                                 <th style=" width: 1%;">S.N.</th>
-                                <th>Name</th>
-                                <th>Date</th>
+                                <th>Voucher No</th>
+                                <th>Employee Name</th>
+                                <th>Date Of Joined</th>
                                 <th>Designation</th>
-                                <th>Branch</th>
                                 <th>Department</th>
-                                <th>EmpId</th>
+                                <th>Branch</th>
+                                <th>Renew</th>
+                                <th>Not Renewing</th>
                                 <th style="width:20%;">Action</th>
                             </tr>
                         </thead>
                         <tbody id="tBodyId">
 
-                            @*@foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td data-th="Srl.No.">@i</td>
-                                        <td data-th="Srl.No.">@item.BranchName</td>
-                                        <td data-th="Code">@item.EmployeeName</td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.files" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.EmirateFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.PassportFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.VisaFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.InsuranceFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.EmpCardFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td data-th="Srl.No.">@i</td>
+                                    <td data-th="Srl.No.">@item.VoucherNo</td>
+                                    <td data-th="Code">@item.EmployeeName</td>
+                                    <td data-th="Code">@item.DateOfJoined</td>
+                                    <td data-th="Code">@item.Designation</td>
+                                    <td data-th="Code">@item.DepartmentName</td>
+                                    <td data-th="Code">@item.BranchName</td>
+                                    @*<td data-th="Code">@item.Renew</td>
+                                    <td data-th="Code">@item.NotRenewing</td>*@
 
-                                        <td data-th="Action">
-
-                                            <div class="d-flex gap-2">
-                                                <div class="edit">
-
-                                                    <a href="/HRMS_EmployeeDocuments/EmployeeDocuments?Id=@item.EmpDocId" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
-                                                </div>
-                                                <div class="remove">
-                                                    <a href="javascript:void(0)" onclick="return DeleteEmployeeDocuments('@item.EmpDocId')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
-
-                                                </div>
+                                    @if (item.Renew == true)
+                                    {
+                                        <td data-th="Code">Yes</td>
+                                    }
+                                    else
+                                    {
+                                        <td data-th="Code">No</td>
+                                    }
+                                    @if (item.NotRenewing == true)
+                                    {
+                                        <td data-th="Code">Yes</td>
+                                    }
+                                    else
+                                    {
+                                        <td data-th="Code">No</td>
+                                    }
+                                    <td data-th="Action">
+                                        <div class="d-flex gap-2">
+                                            <div class="edit">
+                                                <a href="/HR_RenualAndNonRenwal/RenualAndNonRenwal?Id=@item.Idincrept" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
                                             </div>
-                                        </td>
-                                    </tr>
-                                    i++;
-                                }*@
+                                            <div class="remove">
+                                                <a href="javascript:void(0)" onclick="return DeleteRenualAndNonRenwal('@item.Idincrept')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -168,6 +172,8 @@
     <script src="~/assets/js/app.js"></script>
 }
 
+<script src="~/MyApp/HR_RenualAndNonRenwal.js"></script>
+
 <script>
     $(document).ready(function () {
     })
@@ -185,12 +191,23 @@
                     queryString[key] = value;
                 }
             }
+
             $('#txtsearch').val(queryString[key]);
         }
     });
+
     $('#txtsearch').change(function () {
+
         searchfromDB();
     });
+
+    function searchfromDB() {
+        debugger;
+
+        var SearchKey = $('#txtsearch').val();
+        var url = "/HR_RenualAndNonRenwal/RenualAndNonRenwalList?Key=" + SearchKey;
+        window.location.href = url;
+    }
 </script>
 
 
